Refactoring of handling websocket connections (use DesktopSession and DesktopSessionMember). Start integration of multiple sockets for events and desktop.